# ML_project

./: .gitignore  README.md  memo.txt  pyproject.toml  requirements.txt  titanic_analysis.ipynb
