[project]
name = "ML_project"
version = "0.1.0"
authors = [
    {name = "Tae-yoon Kim", email = "tyyoujungzz@naver.com"}
]
description = "타이타닉 데이터 분석 및 머신러닝 구축 과제"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.dependencies]
pandas = "2.2.3"
jupyter = "1.1.1"
seaborn = "0.13.2"
scikit-learn = "1.5.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
